--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -116,3 +116,38 @@ h1 {
   padding: 10px;
 }
 
+#allcomments {
+  margin-top: 40px;
+  text-align: left;
+}
+
+#allcomments input[type='text'],
+#allcomments input[type='email'], 
+#allcomments textarea {
+  margin-bottom: 10px;
+  display: block;
+  width: 50%;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+
+  line-height: 1.8 em;
+}
+
+input[type=submit] {
+  background-color: #1a1a1a;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+}
+
+input[type=submit]:hover {
+  background-color: #aaa;
+}
+
